<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    tools:context="boundary.CategoryInterface">

    <Button
        android:id="@+id/category1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category1"
        />

    <Button
        android:id="@+id/category2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category2"
        />

    <Button
        android:id="@+id/category3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category3"
        />

    <Button
        android:id="@+id/category4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category4"
        />

    <Button
        android:id="@+id/category5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category5"
        />

    <Button
        android:id="@+id/category6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category6"
        />

    <Button
        android:id="@+id/category7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category7"
        />

</LinearLayout>