<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sign"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/name_sign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_sign"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/pass_sign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pass"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_sign"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/email_sign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>


</LinearLayout>
